fix overflow of form

--- a/demo102/style.css
+++ b/demo102/style.css
@@ -11,6 +11,7 @@
     border-right-style: solid;
     border-color: var(--secondary-background-color);
     padding: 20px;
+    overflow-y: auto;
 }
 
 body {
